tests/negative/neg_string_return_type.safe
-- Test: neg_string_return_type
-- Description: String-returning functions reject non-String return expressions.
-- Expected: REJECT type_check_failure

package neg_string_return_type

   function broken returns string

      return 1;



